# ITKCommon

./: CMakeLists.txt  files.cmake  itkCommonConfig.cmake.in
CMakeExternals/: CMakeLists.txt  KWSys.cmake  VXL.cmake
include/: itkMacro.h
